config_validation: Add static create() due to ClientConnectionImpl constructor being static.
Now that Network::ClientConnectionImpl constructor is protected,
ConfigValidateConnection also needs a static create() function.

Signed-off-by: Jarno Rajahalme <jarno@covalent.io>

--- a/source/server/config_validation/BUILD
+++ b/source/server/config_validation/BUILD
@@ -54,7 +54,10 @@ envoy_cc_library(
 
 envoy_cc_library(
     name = "dispatcher_lib",
-    srcs = ["dispatcher.cc"],
+    srcs = [
+        "connection.cc",
+        "dispatcher.cc",
+    ],
     hdrs = [
         "connection.h",
         "dispatcher.h",
