--- a/test/integration/filters/BUILD
+++ b/test/integration/filters/BUILD
@@ -80,6 +80,20 @@ envoy_cc_test_library(
 )
 
 envoy_cc_test_library(
+    name = "request_metadata_filter_config_lib",
+    srcs = [
+        "request_metadata_filter.cc",
+    ],
+    deps = [
+        "//include/envoy/http:filter_interface",
+        "//include/envoy/registry",
+        "//include/envoy/server:filter_config_interface",
+        "//source/extensions/filters/http/common:empty_http_filter_config_lib",
+        "//source/extensions/filters/http/common:pass_through_filter_lib",
+    ],
+)
+
+envoy_cc_test_library(
     name = "random_pause_filter_lib",
     srcs = [
         "random_pause_filter.cc",
