review: remove server dependency on BoringSSL in non-FIPS builds.
Signed-off-by: Piotr Sikora <piotrsikora@google.com>

--- a/ci/prebuilt/BUILD
+++ b/ci/prebuilt/BUILD
@@ -33,6 +33,7 @@ cc_library(
         "thirdparty_build/lib/libcrypto.a",
     ],
     hdrs = glob(["thirdparty_build/include/openssl/**/*.h"]),
+    defines = ["BORINGSSL_FIPS"],
     includes = ["thirdparty_build/include"],
 )
 
