--- a/source/server/BUILD
+++ b/source/server/BUILD
@@ -4,6 +4,7 @@ load(
     "//bazel:envoy_build_system.bzl",
     "envoy_cc_library",
     "envoy_package",
+    "envoy_select_boringssl",
     "envoy_select_hot_restart",
 )
 
@@ -314,14 +315,13 @@ envoy_cc_library(
         "//source/common/runtime:runtime_lib",
         "//source/common/secret:secret_manager_impl_lib",
         "//source/common/singleton:manager_impl_lib",
-        "//source/common/ssl:isfips_lib",
         "//source/common/stats:thread_local_store_lib",
         "//source/common/upstream:cluster_manager_lib",
         "//source/common/upstream:health_discovery_service_lib",
         "//source/server:overload_manager_lib",
         "//source/server/http:admin_lib",
         "@envoy_api//envoy/config/bootstrap/v2:bootstrap_cc",
-    ],
+    ] + envoy_select_boringssl(["//source/common/ssl:isfips_lib"]),
 )
 
 envoy_cc_library(
