--- a/test/integration/BUILD
+++ b/test/integration/BUILD
@@ -633,7 +633,7 @@ envoy_cc_test(
     srcs = ["xds_integration_test.cc"],
     data = ["//test/config/integration:server_xds_files"],
     deps = [
-        ":http_integration_lib",
+        ":xds_integration_test_base",
         "//test/test_common:utility_lib",
     ],
 )
@@ -654,10 +654,6 @@ envoy_cc_test_library(
         "//source/extensions/filters/http/router:config",
         "//source/extensions/filters/network/http_connection_manager:config",
         "//test/common/upstream:utility_lib",
-        "//test/integration/filters:add_trailers_filter_config_lib",
-        "//test/integration/filters:headers_only_filter_config_lib",
-        "//test/integration/filters:passthrough_filter_config_lib",
-        "//test/integration/filters:pause_filter_lib",
         "//test/test_common:registry_lib",
     ],
 )
