--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -8,6 +8,8 @@
 /*/extensions/filters/network/thrift_proxy @zuercher @brian-pane
 # jwt_authn http filter extension
 /*/extensions/filters/http/jwt_authn @qiwzhang @lizan
+# grpc_shim http filter extension
+/*/extensions/filters/http/grpc_shim @snowp
 # header_to_metadata extension
 /*/extensions/filters/http/header_to_metadata @rgs1 @zuercher
 # alts transport socket extension
