--- a/test/extensions/filters/listener/original_src/BUILD
+++ b/test/extensions/filters/listener/original_src/BUILD
@@ -15,32 +15,32 @@ envoy_package()
 envoy_extension_cc_test(
     name = "config_test",
     srcs = ["config_test.cc"],
-    extension_name = "envoy.filters.network.original_src",
+    extension_name = "envoy.filters.listener.original_src",
     deps = [
-        "//source/extensions/filters/network/original_src:config_lib",
-        "@envoy_api//envoy/config/filter/network/original_src/v2alpha1:original_src_cc",
+        "//source/extensions/filters/listener/original_src:config_lib",
+        "@envoy_api//envoy/config/filter/listener/original_src/v2alpha1:original_src_cc",
     ],
 )
 
 envoy_extension_cc_test(
     name = "original_src_config_factory_test",
     srcs = ["original_src_config_factory_test.cc"],
-    extension_name = "envoy.filters.network.original_src",
+    extension_name = "envoy.filters.listener.original_src",
     deps = [
-        "//source/extensions/filters/network/original_src:config",
-        "//source/extensions/filters/network/original_src:config_lib",
-        "//source/extensions/filters/network/original_src:original_src_lib",
+        "//source/extensions/filters/listener/original_src:config",
+        "//source/extensions/filters/listener/original_src:config_lib",
+        "//source/extensions/filters/listener/original_src:original_src_lib",
         "//test/mocks/server:server_mocks",
-        "@envoy_api//envoy/config/filter/network/original_src/v2alpha1:original_src_cc",
+        "@envoy_api//envoy/config/filter/listener/original_src/v2alpha1:original_src_cc",
     ],
 )
 
 envoy_extension_cc_test(
     name = "original_src_test",
     srcs = ["original_src_test.cc"],
-    extension_name = "envoy.filters.network.original_src",
+    extension_name = "envoy.filters.listener.original_src",
     deps = [
-        "//source/extensions/filters/network/original_src:original_src_lib",
+        "//source/extensions/filters/listener/original_src:original_src_lib",
         "//test/mocks/buffer:buffer_mocks",
         "//test/mocks/network:network_mocks",
     ],
@@ -49,10 +49,10 @@ envoy_extension_cc_test(
 envoy_extension_cc_test(
     name = "original_src_socket_option_test",
     srcs = ["original_src_socket_option_test.cc"],
-    extension_name = "envoy.filters.network.original_src",
+    extension_name = "envoy.filters.listener.original_src",
     deps = [
         "//source/common/network:address_lib",
-        "//source/extensions/filters/network/original_src:original_src_socket_option_lib",
+        "//source/extensions/filters/listener/original_src:original_src_socket_option_lib",
         "//test/mocks:common_lib",
         "//test/mocks/network:network_mocks",
     ],
