--- a/api/envoy/config/filter/http/grpc_http1_reverse_bridge/v2alpha1/BUILD
+++ b/api/envoy/config/filter/http/grpc_http1_reverse_bridge/v2alpha1/BUILD
@@ -3,6 +3,6 @@ load("//bazel:api_build_system.bzl", "api_proto_library")
 licenses(["notice"])  # Apache 2
 
 api_proto_library(
-    name = "grpc_shim",
-    srcs = ["grpc_shim.proto"],
+    name = "config",
+    srcs = ["config.proto"],
 )
