--- a/test/extensions/filters/http/grpc_http1_reverse_bridge/BUILD
+++ b/test/extensions/filters/http/grpc_http1_reverse_bridge/BUILD
@@ -12,26 +12,26 @@ load(
 envoy_package()
 
 envoy_extension_cc_test(
-    name = "grpc_shim_test",
-    srcs = ["grpc_shim_test.cc"],
-    extension_name = "envoy.filters.http.grpc_shim",
+    name = "reverse_bridge_test",
+    srcs = ["reverse_bridge_test.cc"],
+    extension_name = "envoy.filters.http.grpc_http1_reverse_bridge",
     deps = [
         "//source/common/buffer:buffer_lib",
         "//source/common/http:header_map_lib",
-        "//source/extensions/filters/http/grpc_shim:grpc_shim_lib",
+        "//source/extensions/filters/http/grpc_http1_reverse_bridge:filter_lib",
         "//test/mocks/upstream:upstream_mocks",
     ],
 )
 
 envoy_extension_cc_test(
-    name = "grpc_shim_integration_test",
-    srcs = ["grpc_shim_integration_test.cc"],
-    extension_name = "envoy.filters.http.grpc_shim",
+    name = "reverse_bridge_integration_test",
+    srcs = ["reverse_bridge_integration_test.cc"],
+    extension_name = "envoy.filters.http.grpc_http1_reverse_bridge",
     deps = [
         "//source/common/buffer:buffer_lib",
         "//source/common/http:header_map_lib",
-        "//source/extensions/filters/http/grpc_shim:config",
-        "//source/extensions/filters/http/grpc_shim:grpc_shim_lib",
+        "//source/extensions/filters/http/grpc_http1_reverse_bridge:config",
+        "//source/extensions/filters/http/grpc_http1_reverse_bridge:filter_lib",
         "//test/integration:http_integration_lib",
         "//test/mocks/upstream:upstream_mocks",
         "//test/test_common:utility_lib",
