--- a/examples/BUILD
+++ b/examples/BUILD
@@ -29,6 +29,7 @@ filegroup(
         "jaeger-tracing/service1-envoy-jaeger.yaml",
         "jaeger-tracing/service2-envoy-jaeger.yaml",
         "lua/envoy.yaml",
+        "lua-file/envoy.yaml",
         "zipkin-tracing/deprecated_v1/front-envoy-zipkin-v1.json",
         "zipkin-tracing/deprecated_v1/service1-envoy-zipkin-v1.json",
         "zipkin-tracing/deprecated_v1/service2-envoy-zipkin-v1.json",
