--- a/source/extensions/filters/network/dubbo_proxy/BUILD
+++ b/source/extensions/filters/network/dubbo_proxy/BUILD
@@ -141,3 +141,12 @@ envoy_cc_library(
     name = "message_lib",
     hdrs = ["message.h"],
 )
+
+envoy_cc_library(
+    name = "decoder_events_lib",
+    hdrs = ["decoder_event_handler.h"],
+    deps = [
+        ":metadata_lib",
+        "//source/common/buffer:buffer_lib",
+    ],
+)
