Move (dummy) QUIC code under //source/extensions/filters/datagram/quiche/.
Signed-off-by: Michael Warres <mpw@google.com>

--- a/test/extensions/filters/datagram/quiche/BUILD
+++ b/test/extensions/filters/datagram/quiche/BUILD
@@ -17,7 +17,7 @@ envoy_cc_test(
     srcs = ["dummy_test.cc"],
     external_deps = ["quiche_http2_platform"],
     deps = [
-        "//source/common/quic:dummy_lib",
+        "//source/extensions/filters/datagram/quiche:dummy_lib",
         "//test/test_common:utility_lib",
     ],
 )
