--- a/source/extensions/filters/network/dubbo_proxy/filters/BUILD
+++ b/source/extensions/filters/network/dubbo_proxy/filters/BUILD
@@ -14,6 +14,7 @@ envoy_cc_library(
     deps = [
         "//include/envoy/buffer:buffer_interface",
         "//include/envoy/network:connection_interface",
+        "//include/envoy/stream_info:stream_info_interface",
         "//source/extensions/filters/network/dubbo_proxy:decoder_events_lib",
         "//source/extensions/filters/network/dubbo_proxy:deserializer_interface",
         "//source/extensions/filters/network/dubbo_proxy:metadata_lib",
@@ -26,6 +27,8 @@ envoy_cc_library(
     hdrs = ["filter_config.h"],
     deps = [
         ":filter_interface",
+        "//include/envoy/server:filter_config_interface",
+        "//source/common/common:macros",
         "//source/common/protobuf:cc_wkt_protos",
     ],
 )
