--- a/examples/grpc-bridge/docker-compose.yml
+++ b/examples/grpc-bridge/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile-python
     volumes:
-      - ./config/s2s-python-envoy.yaml:/etc/s2s-python-envoy.yaml
+      - ./config/s2s-python-envoy.yml:/etc/s2s-python-envoy.yml
     expose:
       - "9001"
 
@@ -15,6 +15,6 @@ services:
       context: .
       dockerfile: Dockerfile-grpc
     volumes:
-      - ./config/s2s-grpc-envoy.yaml:/etc/s2s-grpc-envoy.yaml
+      - ./config/s2s-grpc-envoy.yml:/etc/s2s-grpc-envoy.yml
     expose:
       - "9211"
