examples: missed some file names
Signed-off-by: Luka Hartwig <mail@lukahartwig.de>

--- a/examples/BUILD
+++ b/examples/BUILD
@@ -18,8 +18,8 @@ filegroup(
         "front-proxy/deprecated_v1/service-envoy-v1.json",
         "front-proxy/front-envoy.yaml",
         "front-proxy/service-envoy.yaml",
-        "grpc-bridge/config/s2s-grpc-envoy.yaml",
-        "grpc-bridge/config/s2s-python-envoy.yaml",
+        "grpc-bridge/config/s2s-grpc-envoy.yml",
+        "grpc-bridge/config/s2s-python-envoy.yml",
         "grpc-bridge/deprecated_v1/s2s-grpc-envoy-v1.json",
         "grpc-bridge/deprecated_v1/s2s-python-envoy-v1.json",
         "jaeger-tracing/deprecated_v1/front-envoy-jaeger-v1.json",
