--- a/examples/grpc-bridge/Dockerfile-python
+++ b/examples/grpc-bridge/Dockerfile-python
@@ -7,4 +7,4 @@ RUN pip install -q grpcio protobuf requests
 ADD ./client /client
 RUN chmod a+x /client/client.py
 RUN mkdir /var/log/envoy/
-CMD /usr/local/bin/envoy -c /etc/s2s-python-envoy.yaml
+CMD /usr/local/bin/envoy -c /etc/s2s-python-envoy.yml
