Changed BUILD to include buffer-lib.
Signed-off-by: Jojy G Varghese <jojy_varghese@apple.com>

--- a/source/common/network/BUILD
+++ b/source/common/network/BUILD
@@ -142,6 +142,7 @@ envoy_cc_library(
         "//include/envoy/network:listener_interface",
         "//include/envoy/stats:stats_interface",
         "//include/envoy/stats:stats_macros",
+        "//source/common/buffer:buffer_lib",
         "//source/common/common:assert_lib",
         "//source/common/common:empty_string",
         "//source/common/common:linked_object",
