--- a/source/common/thread/BUILD
+++ b/source/common/thread/BUILD
@@ -9,7 +9,7 @@ load(
 envoy_package()
 
 envoy_cc_library(
-    name = "thread_singleton_lib",
-    srcs = ["thread_singleton.cc"],
+    name = "thread_factory_singleton_lib",
+    srcs = ["thread_factory_singleton.cc"],
     deps = ["//include/envoy/thread:thread_interface"],
 )
