imported the new, working CDS test, and adapted to incremental. works!
Signed-off-by: Fred Douglas <fredlas@google.com>

--- a/test/integration/BUILD
+++ b/test/integration/BUILD
@@ -97,13 +97,13 @@ envoy_cc_test(
 )
 
 envoy_cc_test(
-    name = "incremental_cds_newer_test",
-    srcs = ["incremental_cds_newer_test.cc"],
+    name = "incremental_cds_integration_test",
+    srcs = ["incremental_cds_integration_test.cc"],
     data = [
         "//test/config/integration/certs",
     ],
     deps = [
-        ":xds_integration_test_base",
+        ":incremental_xds_integration_test_base",
         "//source/common/config:protobuf_link_hacks",
         "//source/common/config:resources_lib",
         "//source/common/protobuf:utility_lib",
@@ -278,6 +278,26 @@ envoy_cc_test(
     deps = [
         ":http_protocol_integration_lib",
         "//test/test_common:test_time_lib",
+    ],
+)
+
+envoy_cc_test_library(
+    name = "incremental_xds_integration_test_base",
+    srcs = [
+        "incremental_xds_integration_test_base.cc",
+    ],
+    hdrs = [
+        "incremental_xds_integration_test_base.h",
+    ],
+    deps = [
+        ":http_integration_lib",
+        ":test_host_predicate_lib",
+        "//include/envoy/event:timer_interface",
+        "//source/common/common:thread_annotations",
+        "//source/extensions/filters/http/router:config",
+        "//source/extensions/filters/network/http_connection_manager:config",
+        "//test/common/upstream:utility_lib",
+        "//test/test_common:registry_lib",
     ],
 )
 
