--- a/api/docs/BUILD
+++ b/api/docs/BUILD
@@ -49,6 +49,7 @@ proto_library(
         "//envoy/config/filter/http/transcoder/v2:transcoder",
         "//envoy/config/filter/network/client_ssl_auth/v2:client_ssl_auth",
         "//envoy/config/filter/network/ext_authz/v2:ext_authz",
+        "//envoy/config/filter/listener/original_src/v2alpha1:original_src",
         "//envoy/config/filter/network/http_connection_manager/v2:http_connection_manager",
         "//envoy/config/filter/network/mongo_proxy/v2:mongo_proxy",
         "//envoy/config/filter/network/rate_limit/v2:rate_limit",
