Clean up namespaces, filenames, etc. Share align() with BlockMemoryHashSet.
Signed-off-by: Joshua Marantz <jmarantz@google.com>

--- a/source/common/memory/BUILD
+++ b/source/common/memory/BUILD
@@ -9,9 +9,15 @@ load(
 envoy_package()
 
 envoy_cc_library(
-    name = "mem_debug_lib",
-    srcs = ["mem_debug.cc"],
-    hdrs = ["mem_debug.h"],
+    name = "align_lib",
+    hdrs = ["align.h"],
+)
+
+envoy_cc_library(
+    name = "debug_lib",
+    srcs = ["debug.cc"],
+    hdrs = ["debug.h"],
+    deps = [":align_lib"],
 )
 
 envoy_cc_library(
@@ -19,5 +25,5 @@ envoy_cc_library(
     srcs = ["stats.cc"],
     hdrs = ["stats.h"],
     tcmalloc_dep = 1,
-    deps = [":mem_debug_lib"],
+    deps = [":debug_lib"],
 )
