add stat for when asserts are detected
Signed-off-by: Greg Greenway <ggreenway@apple.com>

--- a/source/common/common/BUILD
+++ b/source/common/common/BUILD
@@ -17,6 +17,7 @@ envoy_package()
 envoy_cc_library(
     name = "assert_lib",
     hdrs = ["assert.h"],
+    srcs = ["assert.cc"],
     deps = [":minimal_logger_lib"],
 )
 
