Address review comments.
Signed-off-by: Joshua Marantz <jmarantz@google.com>

--- a/bazel/BUILD
+++ b/bazel/BUILD
@@ -130,6 +130,11 @@ config_setting(
 )
 
 config_setting(
+    name = "debug_memory",
+    values = {"define": "debug_memory=enabled"},
+)
+
+config_setting(
     name = "enable_perf_annotation",
     values = {"define": "perf_annotation=enabled"},
 )
