Add Network::ListenerConfig::quicListenerFactory() method.
Signed-off-by: Michael Warres <mpw@google.com>

--- a/include/envoy/network/BUILD
+++ b/include/envoy/network/BUILD
@@ -85,6 +85,7 @@ envoy_cc_library(
     deps = [
         ":connection_interface",
         ":listen_socket_interface",
+        "//include/envoy/quic:listener_interface",
         "//include/envoy/stats:stats_interface",
     ],
 )
