--- a/test/server/BUILD
+++ b/test/server/BUILD
@@ -165,10 +165,12 @@ envoy_cc_test(
         "//source/extensions/filters/listener/original_dst:config",
         "//source/extensions/filters/listener/tls_inspector:config",
         "//source/extensions/filters/network/http_connection_manager:config",
+        "//source/extensions/quic_listeners/quiche:config",
         "//source/extensions/transport_sockets/raw_buffer:config",
         "//source/extensions/transport_sockets/ssl:config",
         "//source/server:listener_manager_lib",
         "//test/mocks/network:network_mocks",
+        "//test/mocks/quic:quic_mocks",
         "//test/mocks/server:server_mocks",
         "//test/test_common:environment_lib",
         "//test/test_common:registry_lib",
