--- a/source/common/secret/BUILD
+++ b/source/common/secret/BUILD
@@ -29,8 +29,7 @@ envoy_cc_library(
     hdrs = ["secret_provider_impl.h"],
     deps = [
         "//include/envoy/secret:secret_provider_interface",
-        "//source/common/ssl:certificate_validation_context_config_impl_lib",
-        "//source/common/ssl:tls_certificate_config_impl_lib",
+        "//source/common/common:assert_lib",
         "@envoy_api//envoy/api/v2/auth:cert_cc",
     ],
 )
@@ -53,7 +52,5 @@ envoy_cc_library(
         "//source/common/config:resources_lib",
         "//source/common/config:subscription_factory_lib",
         "//source/common/protobuf:utility_lib",
-        "//source/common/ssl:certificate_validation_context_config_impl_lib",
-        "//source/common/ssl:tls_certificate_config_impl_lib",
     ],
 )
