Add HttpConnectionManager field to Quiche config proto.
Signed-off-by: Michael Warres <mpw@google.com>

--- a/api/envoy/config/filter/network/http_connection_manager/v2/BUILD
+++ b/api/envoy/config/filter/network/http_connection_manager/v2/BUILD
@@ -5,6 +5,7 @@ licenses(["notice"])  # Apache 2
 api_proto_library_internal(
     name = "http_connection_manager",
     srcs = ["http_connection_manager.proto"],
+    visibility = ["//envoy/config/quic_listener/quiche/v2alpha:__pkg__"],
     deps = [
         "//envoy/api/v2:rds",
         "//envoy/api/v2/core:base",
