--- a/api/envoy/config/quic_listener/quiche/v2alpha/BUILD
+++ b/api/envoy/config/quic_listener/quiche/v2alpha/BUILD
@@ -5,4 +5,5 @@ licenses(["notice"])  # Apache 2
 api_proto_library(
     name = "quiche",
     srcs = ["quiche.proto"],
+    deps = ["//envoy/config/filter/network/http_connection_manager/v2:http_connection_manager"],
 )
