--- a/api/envoy/config/grpc_credential/v2alpha/BUILD
+++ b/api/envoy/config/grpc_credential/v2alpha/BUILD
@@ -3,6 +3,16 @@ licenses(["notice"])  # Apache 2
 load("//bazel:api_build_system.bzl", "api_go_proto_library", "api_proto_library_internal")
 
 api_proto_library_internal(
+    name = "aws_iam",
+    srcs = ["aws_iam.proto"],
+)
+
+api_go_proto_library(
+    name = "aws_iam",
+    proto = ":aws_iam",
+)
+
+api_proto_library_internal(
     name = "file_based_metadata",
     srcs = ["file_based_metadata.proto"],
     deps = ["//envoy/api/v2/core:base"],
