Add validation of Quiche config proto.
Signed-off-by: Michael Warres <mpw@google.com>

--- a/source/extensions/quic_listeners/quiche/BUILD
+++ b/source/extensions/quic_listeners/quiche/BUILD
@@ -16,6 +16,7 @@ envoy_cc_library(
     deps = [
         "//include/envoy/quic:config_interface",
         "//include/envoy/registry",
+        "//source/common/protobuf:utility_lib",
         "//source/extensions/quic_listeners:well_known_names",
         "@envoy_api//envoy/config/quic_listener/quiche/v2alpha:quiche_cc",
     ],
