--- a/.bazelrc
+++ b/.bazelrc
@@ -15,7 +15,7 @@ build:asan --test_tag_filters=-no_asan
 build:asan --define signal_trace=disabled
 build:asan --copt -DADDRESS_SANITIZER=1
 
-# Clang 5.0 ASAN/UBSAN
+# Clang ASAN/UBSAN
 build:clang-asan --define ENVOY_CONFIG_ASAN=1
 build:clang-asan --copt -D__SANITIZE_ADDRESS__
 build:clang-asan --copt -fsanitize=address,undefined
@@ -33,14 +33,14 @@ build:clang-asan --test_env=ASAN_SYMBOLIZER_PATH
 build:clang-asan --test_env=ASAN_OPTIONS=handle_abort=1:allow_addr2line=true:check_initialization_order=true:strict_init_order=true
 build:clang-asan --linkopt -fuse-ld=lld
 
-# Clang 5.0 TSAN
+# Clang TSAN
 build:clang-tsan --define ENVOY_CONFIG_TSAN=1
 build:clang-tsan --copt -fsanitize=thread
 build:clang-tsan --linkopt -fsanitize=thread
 build:clang-tsan --define tcmalloc=disabled
 build:clang-tsan --linkopt -fuse-ld=lld
 
-# Clang 5.0 MSAN - broken today since we need to rebuild lib[std]c++ and external deps with MSAN
+# Clang MSAN - broken today since we need to rebuild lib[std]c++ and external deps with MSAN
 # support (see https://github.com/envoyproxy/envoy/issues/443).
 build:clang-msan --define ENVOY_CONFIG_MSAN=1
 build:clang-msan --copt -fsanitize=memory
