--- a/test/extensions/filters/network/kafka/BUILD
+++ b/test/extensions/filters/network/kafka/BUILD
@@ -22,6 +22,16 @@ envoy_extension_cc_test(
 )
 
 envoy_extension_cc_test(
+    name = "serialization_composite_test",
+    srcs = ["generated/serialization_composite_test.cc"],
+    extension_name = "envoy.filters.network.kafka",
+    deps = [
+        "//source/extensions/filters/network/kafka:serialization_lib",
+        "//test/mocks/server:server_mocks",
+    ],
+)
+
+envoy_extension_cc_test(
     name = "kafka_request_test",
     srcs = ["kafka_request_test.cc"],
     extension_name = "envoy.filters.network.kafka",
@@ -34,6 +44,16 @@ envoy_extension_cc_test(
 envoy_extension_cc_test(
     name = "request_codec_test",
     srcs = ["request_codec_test.cc"],
+    extension_name = "envoy.filters.network.kafka",
+    deps = [
+        "//source/extensions/filters/network/kafka:kafka_request_codec_lib",
+        "//test/mocks/server:server_mocks",
+    ],
+)
+
+envoy_extension_cc_test(
+    name = "requests_test",
+    srcs = ["generated/requests_test.cc"],
     extension_name = "envoy.filters.network.kafka",
     deps = [
         "//source/extensions/filters/network/kafka:kafka_request_codec_lib",
