--- a/.bazelrc
+++ b/.bazelrc
@@ -49,5 +49,25 @@ build:clang-msan --define tcmalloc=disabled
 build:clang-msan --copt -fsanitize-memory-track-origins=2
 build:clang-msan --linkopt -fuse-ld=lld
 
+# Mac ASAN/UBSAN
+build:mac-asan --define ENVOY_CONFIG_ASAN=1
+build:mac-asan --copt -D__SANITIZE_ADDRESS__
+build:mac-asan --copt -fsanitize=address,undefined
+build:mac-asan --linkopt -fsanitize=address,undefined
+build:mac-asan --copt -fno-sanitize=vptr
+build:mac-asan --linkopt -fno-sanitize=vptr
+build:mac-asan --copt -fno-sanitize-recover=all
+build:mac-asan --linkopt -ldl
+build:mac-asan --define tcmalloc=disabled
+build:mac-asan --build_tag_filters=-no_asan
+build:mac-asan --test_tag_filters=-no_asan
+build:mac-asan --define signal_trace=disabled
+build:mac-asan --copt -DADDRESS_SANITIZER=1
+build:mac-asan --test_env=ASAN_SYMBOLIZER_PATH
+build:mac-asan --test_env=ASAN_OPTIONS=handle_abort=1:allow_addr2line=true:check_initialization_order=true:strict_init_order=true
+# Workaround, see https://github.com/bazelbuild/bazel/issues/6932
+build:mac-asan --copt -Wno-macro-redefined
+build:mac-asan --copt -D_FORTIFY_SOURCE=0
+
 # Test options
 test --test_env=HEAPCHECK=normal --test_env=PPROF_PATH
