--- a/test/exe/BUILD
+++ b/test/exe/BUILD
@@ -4,11 +4,12 @@ load(
     "//bazel:envoy_build_system.bzl",
     "envoy_cc_test",
     "envoy_package",
+    "envoy_sh_test",
 )
 
 envoy_package()
 
-sh_test(
+envoy_sh_test(
     name = "build_id_test",
     srcs = ["build_id_test.sh"],
     data = [
@@ -17,7 +18,7 @@ sh_test(
     ],
 )
 
-sh_test(
+envoy_sh_test(
     name = "envoy_static_test",
     srcs = ["envoy_static_test.sh"],
     data = ["//source/exe:envoy-static"],
@@ -26,7 +27,7 @@ sh_test(
     tags = ["no_asan"],
 )
 
-sh_test(
+envoy_sh_test(
     name = "version_out_test",
     srcs = ["version_out_test.sh"],
     data = [
