--- a/test/exe/BUILD
+++ b/test/exe/BUILD
@@ -12,18 +12,18 @@ envoy_package()
 envoy_sh_test(
     name = "build_id_test",
     srcs = ["build_id_test.sh"],
+    coverage = False,
     data = [
         "//bazel:raw_build_id.ldscript",
         "//source/exe:envoy-static",
     ],
-    exclude_from_coverage = True,
 )
 
 envoy_sh_test(
     name = "envoy_static_test",
     srcs = ["envoy_static_test.sh"],
+    coverage = False,
     data = ["//source/exe:envoy-static"],
-    exclude_from_coverage = True,
     # NOTE: In some environments, ASAN causes dynamic linking no matter what, so don't run this
     # test when doing ASAN.
     tags = ["no_asan"],
@@ -32,12 +32,12 @@ envoy_sh_test(
 envoy_sh_test(
     name = "version_out_test",
     srcs = ["version_out_test.sh"],
+    coverage = False,
     data = [
         "//:VERSION",
         "//bazel:raw_build_id.ldscript",
         "//source/exe:envoy-static",
     ],
-    exclude_from_coverage = True,
 )
 
 envoy_cc_test(
