Apply fix_format changes.
Signed-off-by: Michael Warres <mpw@google.com>

--- a/source/extensions/quic_listeners/quiche/BUILD
+++ b/source/extensions/quic_listeners/quiche/BUILD
@@ -8,8 +8,8 @@ load(
 
 envoy_package()
 
-// Placeholder library to verify/illustrate depending on a QUICHE build target.
-// TODO(mpwarres): remove once real build rules added here.
+# Placeholder library to verify/illustrate depending on a QUICHE build target.
+# TODO(mpwarres): remove once real build rules added here.
 envoy_cc_library(
     name = "dummy_lib",
     srcs = ["dummy.cc"],
