--- a/test/extensions/filters/network/redis_proxy/BUILD
+++ b/test/extensions/filters/network/redis_proxy/BUILD
@@ -109,5 +109,6 @@ envoy_extension_cc_test_binary(
         "//source/common/stats:stats_lib",
         "//source/extensions/filters/network/redis_proxy:command_splitter_lib",
         "//test/test_common:printers_lib",
+        "//test/test_common:simulated_time_system_lib",
     ],
 )
