Flesh out QUICHE http2 platform impls.
For the impl files that are trivially implemented, add the implementation.
For the impl files that require more work, add TODO comments.

Signed-off-by: Michael Warres <mpw@google.com>

--- a/source/extensions/quic_listeners/quiche/platform/BUILD
+++ b/source/extensions/quic_listeners/quiche/platform/BUILD
@@ -8,6 +8,9 @@ load(
 
 envoy_package()
 
+# TODO: add build targets for quic_platform_impl_lib and spdy_platform_impl_lib,
+#   as _impl.* files for those are added.
+
 envoy_cc_library(
     name = "http2_platform_impl_lib",
     hdrs = [
@@ -28,5 +31,10 @@ envoy_cc_library(
         "http2_string_utils_impl.h",
         "http2_test_helpers_impl.h",
     ],
+    external_deps = [
+        "abseil_base",
+        "abseil_optional",
+    ],
     visibility = ["//visibility:public"],
+    deps = ["//source/common/common:assert_lib"],
 )
