--- a/.bazelrc
+++ b/.bazelrc
@@ -23,10 +23,10 @@ build:clang-asan --config=asan
 build:clang-asan --linkopt -fuse-ld=lld
 
 # macOS ASAN/UBSAN
-build:mac-asan --config=asan
+build:macos-asan --config=asan
 # Workaround, see https://github.com/bazelbuild/bazel/issues/6932
-build:mac-asan --copt -Wno-macro-redefined
-build:mac-asan --copt -D_FORTIFY_SOURCE=0
+build:macos-asan --copt -Wno-macro-redefined
+build:macos-asan --copt -D_FORTIFY_SOURCE=0
 
 # Clang TSAN
 build:clang-tsan --define ENVOY_CONFIG_TSAN=1
