Tweak quiche.BUILD deps clause to allow QUICHE dependency on Envoy build targets.
Signed-off-by: Michael Warres <mpw@google.com>

--- a/source/extensions/quic_listeners/quiche/platform/BUILD
+++ b/source/extensions/quic_listeners/quiche/platform/BUILD
@@ -36,4 +36,5 @@ envoy_cc_library(
         "abseil_optional",
     ],
     visibility = ["//visibility:public"],
+    deps = ["//source/common/common:assert_lib"],
 )
