--- a/source/extensions/filters/http/common/aws/BUILD
+++ b/source/extensions/filters/http/common/aws/BUILD
@@ -9,7 +9,7 @@ load(
 envoy_package()
 
 envoy_cc_library(
-    name = "signer_lib",
+    name = "signer_interface",
     hdrs = ["signer.h"],
     deps = [
         "//include/envoy/http:message_interface",
@@ -20,28 +20,32 @@ envoy_cc_library(
     name = "signer_impl_lib",
     srcs = ["signer_impl.cc"],
     hdrs = ["signer_impl.h"],
-    external_deps = ["ssl"],
     deps = [
-        ":credentials_provider_lib",
-        ":region_provider_lib",
-        ":signer_lib",
+        ":credentials_provider_interface",
+        ":signer_interface",
+        ":utility_lib",
         "//source/common/buffer:buffer_lib",
-        "//source/common/common:assert_lib",
         "//source/common/common:hex_lib",
         "//source/common/common:logger_lib",
-        "//source/common/common:stack_array",
         "//source/common/common:utility_lib",
         "//source/common/http:headers_lib",
+        "//source/common/singleton:const_singleton",
+        "//source/common/ssl:utility_lib",
     ],
 )
 
 envoy_cc_library(
-    name = "credentials_provider_lib",
+    name = "credentials_provider_interface",
     hdrs = ["credentials_provider.h"],
     external_deps = ["abseil_optional"],
 )
 
 envoy_cc_library(
-    name = "region_provider_lib",
-    hdrs = ["region_provider.h"],
+    name = "utility_lib",
+    srcs = ["utility.cc"],
+    hdrs = ["utility.h"],
+    deps = [
+        "//source/common/common:utility_lib",
+        "//source/common/http:headers_lib",
+    ],
 )
