review: pass existing CC, CXX and PATH variables.
Signed-off-by: Piotr Sikora <piotrsikora@google.com>

--- a/.bazelrc
+++ b/.bazelrc
@@ -50,7 +50,10 @@ build:clang-msan --copt -fsanitize-memory-track-origins=2
 build:clang-msan --linkopt -fuse-ld=lld
 
 # Clang with libc++
+build:libc++ --action_env=CC
+build:libc++ --action_env=CXX
 build:libc++ --action_env=CXXFLAGS=-stdlib=libc++
+build:libc++ --action_env=PATH
 build:libc++ --define force_libcpp=enabled
 build:libc++ --linkopt -fuse-ld=lld
 
