Change the method name type to StringMatcher.
Signed-off-by: leilei.gll <leilei.gll@alibaba-inc.com>

--- a/api/envoy/config/filter/network/dubbo_proxy/v2alpha1/BUILD
+++ b/api/envoy/config/filter/network/dubbo_proxy/v2alpha1/BUILD
@@ -12,5 +12,6 @@ api_proto_library(
         "//envoy/api/v2/core:base",
         "//envoy/api/v2/route",
         "//envoy/type:range",
+        "//envoy/type/matcher:string",
     ],
 )
