--- a/test/common/config/BUILD
+++ b/test/common/config/BUILD
@@ -54,6 +54,7 @@ envoy_cc_test(
         "//test/mocks/runtime:runtime_mocks",
         "//test/test_common:logging_lib",
         "//test/test_common:simulated_time_system_lib",
+        "//test/test_common:test_time_lib",
         "//test/test_common:utility_lib",
         "@envoy_api//envoy/api/v2:discovery_cc",
         "@envoy_api//envoy/api/v2:eds_cc",
