--- a/test/mocks/server/BUILD
+++ b/test/mocks/server/BUILD
@@ -44,5 +44,6 @@ envoy_cc_mock(
         "//test/mocks/tracing:tracing_mocks",
         "//test/mocks/upstream:upstream_mocks",
         "//test/test_common:simulated_time_system_lib",
+        "//test/test_common:test_time_lib",
     ],
 )
