--- a/test/server/BUILD
+++ b/test/server/BUILD
@@ -173,6 +173,7 @@ envoy_cc_test(
         "//test/test_common:environment_lib",
         "//test/test_common:registry_lib",
         "//test/test_common:simulated_time_system_lib",
+        "//test/test_common:test_time_lib",
         "//test/test_common:threadsafe_singleton_injector_lib",
     ],
 )
