all tests working
Signed-off-by: Joshua Marantz <jmarantz@google.com>

--- a/test/test_common/BUILD
+++ b/test/test_common/BUILD
@@ -160,6 +160,7 @@ envoy_cc_test_library(
     srcs = ["test_time.cc"],
     hdrs = ["test_time.h"],
     deps = [
+        ":global_lib",
         ":test_time_system_interface",
         "//source/common/event:real_time_system_lib",
     ],
@@ -169,6 +170,7 @@ envoy_cc_test_library(
     name = "test_time_system_interface",
     hdrs = ["test_time_system.h"],
     deps = [
+        ":global_lib",
         "//include/envoy/event:timer_interface",
         "//source/common/common:thread_lib",
     ],
